--- a/mutabledatasource/dependencies.gradle
+++ b/mutabledatasource/dependencies.gradle
@@ -1,6 +1,7 @@
 ext {
-    appcompat_version="1.1.0"
-    ktx_version="1.3.0"
+    appcompat_version = "1.1.0"
+    ktx_version = "1.3.0"
+    paging_version = "2.1.2"
 
-    test_junit_version="4.12"
+    test_junit_version = "4.12"
 }
